--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -12,7 +12,7 @@
 			<div class="pointer"></div>
 			<div class="content">
 
-				<span class="comment-date"><a href="#profile/{{user.id}}" title="{{user.name}}">{{user.name}}</a>  {{poster}} {{comment_date}}</span>
+				<span class="comment-date"><a href="#profile/{{user.id}}" title="{{user.name}}">{{user.name}}</a>  <span class="poster-info">{{poster}} {{comment_date}}</span></span>
 				
 				<p class="comment-text">{{{comment}}}</p>
 
