--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2348,10 +2348,17 @@ li.sport .teamlist-header, .stat-val-outer {
 		width: 60%;
 		padding: 0;
 		padding-left: 11px;
+		white-space:nowrap; 
+		text-overflow:ellipsis;
+		overflow: hidden;
 	}
 	
 	.template-container > div {
 		margin-bottom: 15px;
+	}
+	
+	#main {
+		overflow: hidden;
 	}
 
 }
