--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1726,6 +1726,10 @@ form fieldset > div {
 }
 /*form fieldset > div > div { float: left; }*/
 
+div.field-row.error input, div.field-row.error textarea{
+    background-color: #ffd5d8 !important;
+}
+
 div[data-error] {
     display: block;
 	color: #a30000;
@@ -1740,7 +1744,7 @@ div[data-error]:empty{
     display: none !important;
 }
 .focus-error-animation {
-	border: 5px solid #FF0000 !important;
+	border: 2px solid #ff5b5a !important;
 	border-radius: 5px !important;
 	color: #000 !important;
 }
