add club form to 95% and order states alphabetically

--- a/html/usercontrols/add-club/add-club.css
+++ b/html/usercontrols/add-club/add-club.css
@@ -18,7 +18,8 @@ float: right;
 .add-club-school-outer {
 	height: 95%;
 	overflow-y: auto;
-	overflow-x: hidden; 
+	overflow-x: hidden;
+    min-height: 95%;
 }
 
 .location-buttons {
