--- a/html_build/pages/team/templates/menu.html
+++ b/html_build/pages/team/templates/menu.html
@@ -1,4 +1,9 @@
 <div id="sports-info">
+	<div class="team-selector-labels">
+		<div class="sports-label">Sport</div>
+		<div class="levels-label">Level</div>
+		<div class="seasons-label">Season</div>
+	</div>
 	<div class="sports-h drop-down-main-outer"></div>
 	<div class="season-h drop-down-main-outer"></div>
 	<div class="team-h drop-down-main-outer"></div>
