--- a/html/packages/user/templates/fitnessbasic-item.html
+++ b/html/packages/user/templates/fitnessbasic-item.html
@@ -4,7 +4,7 @@
 			<img title="{{name}}" src="{{icon}}" style=""/>
 			<span class="stat-val-outer">
 				<span class="stats-val-h">{{#val}}{{val}}{{/val}}{{^val}}--{{/val}}</span>
-				<input type="text" data-id="{{id}}" class="stats-input stats-input-h hide-force" value="{{#val}}{{val}}{{/val}}{{^val}}{{/val}}"/>
+				<input type="text" data-id="{{id}}" data-resume-data-id="{{resume_data_id}}" class="stats-input stats-input-h hide-force" value="{{#val}}{{val}}{{/val}}{{^val}}{{/val}}"/>
 			</span>
 		</div>
 	{{/data}}
