--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1687,7 +1687,7 @@ div.game-info span.game-header{
 	background: url(http://cdn.athletez.com/resources/img/white_loading.gif) repeat;
 	width: 100%;
 	height: 100%;
-	min-height: 100px;
+	min-height: 70px;
 	margin: 0 auto;
 }
 
@@ -2313,3 +2313,10 @@ height: 63px;
 
 
 /* Dotted area css ends  */
+
+
+.spinner{
+    display: inline;
+    top:10px;
+    left:15px;
+}
