--- a/html/css/form-fields.css
+++ b/html/css/form-fields.css
@@ -25,6 +25,7 @@ form.autoform a.verify-address-h{
     text-decoration: underline;
     font-weight: bold;
     font-size:.9em;
+    display: block;
 }
 
 form.autoform .input-field input.submit-btn{
