--- a/html_build/css/form-fields.css
+++ b/html_build/css/form-fields.css
@@ -21,6 +21,7 @@ form.autoform a.verify-address-h{
     text-decoration: underline;
     font-weight: bold;
     font-size:.9em;
+    display: block;
 }
 form.autoform .input-field input.submit-btn{
     background-color: #9cca3c;
