--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -2,12 +2,12 @@
 	<div>
 		{{#eventPage}}
 			<span class="event-sport-label">{{eventPage}} Events</span>
-			<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h right-with-icon">Add Event / Meet</a>
+			<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h desktop-link right-with-icon">Add Event / Meet</a>
 		{{/eventPage}}
 
 		{{^eventPage}}
 			<span class="event-sport-label">&nbsp;</span>
-			<a href="javascript: void(0);" title="Add a Game" class="add-game-h right-with-icon">Add Game.</a>
+			<a href="javascript: void(0);" title="Add a Game" class="add-game-h desktop-link right-with-icon">Add Game.</a>
 		{{/eventPage}}
 	</div>
 <div class="select-team">
@@ -17,20 +17,39 @@
 		</ul>
 	</div>
 </div>
+{{#eventPage}}
+	<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h mobile-link right-with-icon">Add Event / Meet</a>
+{{/eventPage}}
+
+{{^eventPage}}
+		<a href="javascript: void(0);" title="add game" class="add-game-h mobile-link right-with-icon">Add Game.</a>
+{{/eventPage}}
+
+
 </div>
 {{/data}}
 {{^data}}
 <div class="info">
 	{{#eventPage}}
 	<div>
-		<a href="javascript: void(0);" title="Add an Event" class="add-event-h right-with-icon">Add Event / Meet</a>
+		<a href="javascript: void(0);" title="Add an Event" class="add-event-h desktop-link right-with-icon">Add Event / Meet</a>
 	</div>
 	{{/eventPage}}
 	{{^eventPage}}
 	<div>
-		<a href="javascript: void(0);" title="add game" class="add-game-h right-with-icon">Add Game.</a>
+		<a href="javascript: void(0);" title="add game" class="add-game-h desktop-link right-with-icon">Add Game.</a>
 	</div>
 	{{/eventPage}}
+	
+	
+	
+	{{#eventPage}}
+		<a href="javascript: void(0);" title="Add an Event" class="add-event-h mobile-link right-with-icon">Add Event / Meet</a>
+	{{/eventPage}}
+	{{^eventPage}}
+		<a href="javascript: void(0);" title="add game" class="add-game-h mobile-link right-with-icon">Add Game.</a>
+	{{/eventPage}}
+	
 
 </div>
 {{/data}}
